--- a/src/app/app.tag.html
+++ b/src/app/app.tag.html
@@ -16,18 +16,16 @@
 				<p>Check #2 ok? <tick-cross-toggle id="check2" state={state.check2} onchange={tickChange}></tick-cross-toggle></p>
 				<p>Check #3 ok? <tick-cross-toggle id="check3" state={state.check3} onchange={tickChange}></tick-cross-toggle></p>
 				<pre>{JSON.stringify(state, null, 4)}</pre>
-				<img src="../all/app/icon-camera.svg" height="30" class="tr-logo" />
-				<div class="dup-camera-test"></div>
 			</p>
 		</section>
 		<div class="tr-push"></div>
 	</div>
 	<footer>&copy; Trust ID 2017. All rights reserved.</footer>
 
-	<script type="es6">
+	<script>
 
 		import {State} from './state.js'
-    import '../tick-cross-toggle/tick-cross-toggle.tag'
+    import '../tick-cross-toggle/tick-cross-toggle.tag.html'
 
     this.state = State
 		this.tickChange = (e) => {
