tidyup + es6 removal (style injection issue) + open.js

--- a/src/app/app.tag.html
+++ b/src/app/app.tag.html
@@ -19,6 +19,7 @@
 				<img src="../all/app/icon-camera.svg" height="30" class="tr-logo" />
 				<div class="dup-camera-test"></div>
 			</p>
+			<progress-bar w="10%" h="20px"></progress-bar>
 		</section>
 		<div class="tr-push"></div>
 	</div>
@@ -27,6 +28,7 @@
 	<script>
 
 		import {State} from './state.js'
+    import '../progress-bar/progress-bar.tag.html'
     import '../tick-cross-toggle/tick-cross-toggle.tag.html'
 
     this.state = State
